Fix #49 this does the basic mocking out of the GitHub API. I can fill out the mocks as I need them. It also removes the old unit tests and adds new ones that I can start filling in, see #19

--- a/GitHubExtension/GitHubExtension.csproj
+++ b/GitHubExtension/GitHubExtension.csproj
@@ -15,7 +15,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Alteridem.GitHub.Extension</RootNamespace>
-    <AssemblyName>GitHubExtension</AssemblyName>
+    <AssemblyName>Alteridem.GitHub.Extension</AssemblyName>
     <SignAssembly>false</SignAssembly>
     <AssemblyOriginatorKeyFile>
     </AssemblyOriginatorKeyFile>
