--- a/GitHubExtension.Test/GitHubExtension.Test.csproj
+++ b/GitHubExtension.Test/GitHubExtension.Test.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Net.Http" />
+    <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -56,9 +57,19 @@
     <Compile Include="Converters\MarkdownConverterTest.cs" />
     <Compile Include="Converters\StringToColorConverterTest.cs" />
     <Compile Include="Mocks\GitHubApiMock.cs" />
+    <Compile Include="Mocks\LoginView.cs" />
     <Compile Include="Model\TestRepositoryWrapper.cs" />
     <Compile Include="Modules\MocksModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Mocks\AddComment.cs" />
+    <Compile Include="ViewModel\AddCommentTest.cs" />
+    <Compile Include="ViewModel\GravatarTest.cs" />
+    <Compile Include="Mocks\IssueEditor.cs" />
+    <Compile Include="ViewModel\IssueEditorTest.cs" />
+    <Compile Include="ViewModel\IssueListTest.cs" />
+    <Compile Include="ViewModel\IssueTest.cs" />
+    <Compile Include="ViewModel\LoginTest.cs" />
+    <Compile Include="ViewModel\UserTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\GitHubExtension\GitHubExtension.csproj">
