--- a/GitHubExtension.Test/GitHubExtension.Test.csproj
+++ b/GitHubExtension.Test/GitHubExtension.Test.csproj
@@ -30,6 +30,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.VisualStudio.Shell.12.0, Version=12.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
     <Reference Include="Ninject">
       <HintPath>..\packages\Ninject.3.0.1.10\lib\net45-full\Ninject.dll</HintPath>
     </Reference>
@@ -57,14 +58,14 @@
     <Compile Include="Converters\MarkdownConverterTest.cs" />
     <Compile Include="Converters\StringToColorConverterTest.cs" />
     <Compile Include="Mocks\GitHubApiMock.cs" />
-    <Compile Include="Mocks\LoginView.cs" />
+    <Compile Include="Mocks\LoginViewMock.cs" />
     <Compile Include="Model\TestRepositoryWrapper.cs" />
     <Compile Include="Modules\MocksModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Mocks\AddComment.cs" />
+    <Compile Include="Mocks\AddCommentMock.cs" />
     <Compile Include="ViewModel\AddCommentTest.cs" />
     <Compile Include="ViewModel\GravatarTest.cs" />
-    <Compile Include="Mocks\IssueEditor.cs" />
+    <Compile Include="Mocks\IssueEditorMock.cs" />
     <Compile Include="ViewModel\IssueEditorTest.cs" />
     <Compile Include="ViewModel\IssueListTest.cs" />
     <Compile Include="ViewModel\IssueTest.cs" />
