--- a/GitHubIssues/app.config
+++ b/GitHubIssues/app.config
@@ -1,5 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <configSections>
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="Alteridem.GitHub.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+    </sectionGroup>
+  </configSections>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -24,4 +29,14 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <userSettings>
+    <Alteridem.GitHub.Properties.Settings>
+      <setting name="Credentials" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="Repository" serializeAs="String">
+        <value>0</value>
+      </setting>
+    </Alteridem.GitHub.Properties.Settings>
+  </userSettings>
 </configuration>
