--- a/GitHubExtension.Test/GitHubExtension.Test.csproj
+++ b/GitHubExtension.Test/GitHubExtension.Test.csproj
@@ -106,6 +106,7 @@
       <HintPath>..\packages\VSSDK.DTE.7.0.4\lib\net20\stdole.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.Core" />
     <Reference Include="System.Design" />
     <Reference Include="System.Drawing" />
