--- a/GitHubExtension/packages.config
+++ b/GitHubExtension/packages.config
@@ -2,15 +2,13 @@
 <packages>
   <package id="Newtonsoft.Json" version="6.0.6" targetFramework="net45" />
   <package id="Ninject" version="3.2.2.0" targetFramework="net45" />
-  <package id="NLog" version="3.1.0.0" targetFramework="net45" />
-  <package id="NLog.Config" version="3.1.0.0" targetFramework="net45" />
-  <package id="NLog.Schema" version="3.1.0.0" targetFramework="net45" />
   <package id="Octokit" version="0.5.2" targetFramework="net45" />
   <package id="Rx-Core" version="2.2.5" targetFramework="net45" />
   <package id="Rx-Interfaces" version="2.2.5" targetFramework="net45" />
   <package id="Rx-Linq" version="2.2.5" targetFramework="net45" />
   <package id="Rx-Main" version="2.2.5" targetFramework="net45" />
   <package id="Rx-PlatformServices" version="2.2.5" targetFramework="net45" />
+  <package id="Tvl.VisualStudio.OutputWindow.Interfaces" version="2.0.0" targetFramework="net45" />
   <package id="VSSDK.DTE" version="7.0.4" targetFramework="net45" />
   <package id="VSSDK.GraphModel" version="11.0.4" targetFramework="net45" />
   <package id="VSSDK.IDE" version="7.0.4" targetFramework="net45" />
