--- a/GitHubExtension.Test/GitHubExtension.Test.csproj
+++ b/GitHubExtension.Test/GitHubExtension.Test.csproj
@@ -89,6 +89,9 @@
       <Private>False</Private>
       <HintPath>..\packages\VSSDK.TextManager.Interop.8.8.0.4\lib\net20\Microsoft.VisualStudio.TextManager.Interop.8.0.dll</HintPath>
     </Reference>
+    <Reference Include="Moq">
+      <HintPath>..\packages\Moq.4.2.1409.1722\lib\net40\Moq.dll</HintPath>
+    </Reference>
     <Reference Include="Ninject, Version=3.2.0.0, Culture=neutral, PublicKeyToken=c7192dc5380945e7, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Ninject.3.2.2.0\lib\net45-full\Ninject.dll</HintPath>
@@ -135,6 +138,7 @@
     <Compile Include="Mocks\LoginViewMock.cs" />
     <Compile Include="Model\CacheTest.cs" />
     <Compile Include="Model\CredentialCacheTest.cs" />
+    <Compile Include="Model\GitHubApiBaseTest.cs" />
     <Compile Include="Model\RepositoryWrapperTest.cs" />
     <Compile Include="Modules\MocksModule.cs" />
     <Compile Include="OutputWriterTests.cs" />
