--- a/GitHubExtension.Test/packages.config
+++ b/GitHubExtension.Test/packages.config
@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Moq" version="4.2.1409.1722" targetFramework="net45" />
+  <package id="Moq" version="4.2.1502.0911" targetFramework="net45" />
   <package id="Ninject" version="3.2.2.0" targetFramework="net45" />
-  <package id="NUnit" version="2.6.4" targetFramework="net45" />
-  <package id="Octokit" version="0.6.1" targetFramework="net45" />
+  <package id="NUnit" version="3.0.0-beta-1" targetFramework="net45" />
+  <package id="Octokit" version="0.10.0" targetFramework="net45" />
   <package id="VSSDK.DTE" version="7.0.4" targetFramework="net45" />
   <package id="VSSDK.GraphModel" version="12.0.4" targetFramework="net45" />
   <package id="VSSDK.IDE" version="7.0.4" targetFramework="net45" />
