--- a/GitHubIssues/packages.config
+++ b/GitHubIssues/packages.config
@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="MarkdownDeep.NET" version="1.5" targetFramework="net45" />
-  <package id="Newtonsoft.Json" version="6.0.6" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net45" />
   <package id="Ninject" version="3.2.2.0" targetFramework="net45" />
-  <package id="Octokit" version="0.6.1" targetFramework="net45" />
+  <package id="Octokit" version="0.10.0" targetFramework="net45" />
   <package id="Rx-Core" version="2.2.5" targetFramework="net45" />
   <package id="Rx-Interfaces" version="2.2.5" targetFramework="net45" />
   <package id="Rx-Linq" version="2.2.5" targetFramework="net45" />
@@ -11,10 +11,11 @@
   <package id="Rx-PlatformServices" version="2.2.5" targetFramework="net45" />
   <package id="Rx-Xaml" version="2.2.5" targetFramework="net45" />
   <package id="VSSDK.DTE" version="7.0.4" targetFramework="net45" />
-  <package id="VSSDK.GraphModel" version="11.0.4" targetFramework="net45" />
+  <package id="VSSDK.GraphModel" version="12.0.4" targetFramework="net45" />
   <package id="VSSDK.IDE" version="7.0.4" targetFramework="net45" />
   <package id="VSSDK.IDE.10" version="10.0.4" targetFramework="net45" />
   <package id="VSSDK.IDE.11" version="11.0.4" targetFramework="net45" />
+  <package id="VSSDK.IDE.12" version="12.0.4" targetFramework="net45" />
   <package id="VSSDK.IDE.8" version="8.0.4" targetFramework="net45" />
   <package id="VSSDK.IDE.9" version="9.0.4" targetFramework="net45" />
   <package id="VSSDK.OLE.Interop" version="7.0.4" targetFramework="net45" />
