--- a/GitHubIssues/GitHubIssues.csproj
+++ b/GitHubIssues/GitHubIssues.csproj
@@ -174,6 +174,7 @@
     <Compile Include="Logging\BaseOutputWriter.cs" />
     <Compile Include="Logging\IOutputWriter.cs" />
     <Compile Include="Logging\LogLevel.cs" />
+    <Compile Include="Model\AuthenticationHelpers.cs" />
     <Compile Include="Model\Cache.cs" />
     <Compile Include="Converters\MarkdownConverter.cs" />
     <Compile Include="Converters\StringToColorConverter.cs" />
