--- a/GitHubIssues/GitHubIssues.csproj
+++ b/GitHubIssues/GitHubIssues.csproj
@@ -195,6 +195,8 @@
     <Compile Include="Filters\UserFilterType.cs" />
     <Compile Include="Modules\GitHubModule.cs" />
     <Compile Include="Properties\Annotations.cs" />
+    <Compile Include="Styles\IssueTheme.cs" />
+    <Compile Include="Styles\StyleLoader.cs" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
@@ -218,6 +220,12 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="GitHub.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Styles\light_theme.css" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Styles\dark_theme.css" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
