Added a solution open event

--- a/GitHubExtension/GitHubExtension.csproj
+++ b/GitHubExtension/GitHubExtension.csproj
@@ -182,6 +182,7 @@
     <Compile Include="..\GitHubIssues\AssemblyInfoCommon.cs">
       <Link>AssemblyInfoCommon.cs</Link>
     </Compile>
+    <Compile Include="Extensions\ServiceProviderExtensions.cs" />
     <Compile Include="Interfaces\IAddComment.cs" />
     <Compile Include="Interfaces\IClosable.cs" />
     <Compile Include="Interfaces\IEnableable.cs" />
