--- a/GitHubExtension.Test/packages.config
+++ b/GitHubExtension.Test/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="LibGit2Sharp" version="0.22.0-pre20150415174523" targetFramework="net45" />
   <package id="Moq" version="4.2.1502.0911" targetFramework="net45" />
   <package id="Ninject" version="3.2.2.0" targetFramework="net45" />
   <package id="NUnit" version="3.0.0-beta-1" targetFramework="net45" />
