--- a/GitHubExtension/packages.config
+++ b/GitHubExtension/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="LibGit2Sharp" version="0.22.0-pre20150415174523" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net45" />
   <package id="Ninject" version="3.2.2.0" targetFramework="net45" />
   <package id="Octokit" version="0.10.0" targetFramework="net45" />
